Add legacyBehavior in tags <Links>

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BLOG_NAME="Sara Szewinsky"
 BLOG_TITLE="Resumo das aulas CFC"
 BLOG_FOOTER_TEXT="© All rights reserved - SC Dev"
+ICON_ICO="./icon.ico"
